--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,8 @@
 /create_acl_for_luci.err
 /create_acl_for_luci.ok
 /create_acl_for_luci.warn
+
+# 忽略所有子目录中的 .git, .github, .gitignore 等
+**/.git
+**/.github
+**/.gitignore
